Fix the focused nav item has their right or left outline cut off

--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -102,6 +102,14 @@
   }
 }
 
+.site-header,
+.site-nav {
+  a:focus,
+  a:focus-visible {
+    outline-offset: -1px;
+  }
+}
+
 .site-nav {
   display: none;
 
